@@ -81,7 +81,7 @@ function (data, model, response = NULL, S = NULL, C = NULL, sigma = NULL, lambda
           xcplots[[i]] <- plotxc(xc = data[, C[[i]]], xc.cond = xc.cond[1L, C[[
             i]]], name = colnames(data[, C[[i]], drop = FALSE]), trim =
             xcplotpar$trim, select.colour = select.colour, select.cex =
-            select.cex)
+            select.cex, hist2d = xcplotpar$hist2d, fullbin = xcplotpar$fullbin)
           coords[i, ] <- par("fig")
         }
       } else if (identical(select.type, "pcp")){
@@ -121,7 +121,7 @@ function (data, model, response = NULL, S = NULL, C = NULL, sigma = NULL, lambda
         xcplots[[i]] <- plotxc(xc = data[, C[[i]]], xc.cond = xc.cond[1L,
           C[[i]]], name = colnames(data[, C[[i]], drop = FALSE]), trim =
           xcplotpar$trim, select.colour = select.colour, select.cex =
-          select.cex)
+          select.cex, hist2d = xcplotpar$hist2d, fullbin = xcplotpar$fullbin)
         coords[i, ] <- par("fig")
       }
     }
@@ -286,7 +286,8 @@ function (data, model, response = NULL, S = NULL, C = NULL, sigma = NULL, lambda
             screen(xcscreens[i])
             plotxc(xc = xcplots[[i]]$xc, xc.cond = xcplots[[i]]$xc.cond.old,
               name = xcplots[[i]]$name, trim = FALSE, select.colour = xcplots[[i
-              ]]$select.colour, select.cex = xcplots[[i]]$select.cex)
+              ]]$select.colour, select.cex = xcplots[[i]]$select.cex, hist2d =
+              xcplotpar$hist2d, fullbin = xcplotpar$fullbin)
           }
           dev.off()
           cat(paste("\nSnapshot saved: '", filename[2L],"'", sep = ""))
@@ -305,7 +306,8 @@ function (data, model, response = NULL, S = NULL, C = NULL, sigma = NULL, lambda
             screen(xcscreens[i])
             plotxc(xc = xcplots[[i]]$xc, xc.cond = xcplots[[i]]$xc.cond.old,
               name = xcplots[[i]]$name, trim = FALSE, select.colour = xcplots[[i
-              ]]$select.colour, select.cex = xcplots[[i]]$select.cex)
+              ]]$select.colour, select.cex = xcplots[[i]]$select.cex, hist2d =
+              xcplotpar$hist2d, fullbin = xcplotpar$fullbin)
           }
           xsscreens <- if (plotlegend){
             split.screen(figs = matrix(c(0, 1 - legendwidth, 1 - legendwidth, 1,
