@@ -5,6 +5,8 @@ News
 ---------------------------------------------------------
 
 Version 0.4-0.9999
+  * The 2-D histogram in `plotxc` has been made optional, and also allows a cap
+    on the bin counts, to allow for skewed data.
   * In `similarityweight`, the weight values are no longer discretised. All
   values between 0 and 1 are allowed.
   * New unexported function `weightcolor` used to weight colours using
